--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.2.1",
     "core-js-compat": "^3.4.7",
     "gh": "^2.8.9",
+    "gh-pages": "^3.2.3",
     "pages": "^0.0.16",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
